--- a/poem.html
+++ b/poem.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="main.css">
+  <title>The Nights - Avicii</title>
+</head>
 
+<body>
+  <p>
+    Hey, once upon a younger year
+    When all our shadows disappeared
+    The animals inside came out to play
+    Hey, when face to face with all our fears
+    Learned our lessons through the tears
+    Made memories we knew would never fade
+  </p>
+  <p>  
+    One day my father—he told me,
+    "Son, don't let it slip away"
+    He took me in his arms, I heard him say,
+  </p>
+  <p>
+    "When you get older
+    Your wild life will live for younger days
+    Think of me if ever you're afraid."
+  </p>
+  <p>
+    He said, "One day you'll leave this world behind
+    So live a life you will remember."
+    My father told me when I was just a child
+    These are the nights that never die
+    My father told me...
+  </p>
+  <p>
+    When thunder clouds start pouring down
+    Light a fire they can't put out
+    Carve your name into those shinning stars
+    He said, "Go venture far beyond the shores.
+    Don't forsake this life of yours.
+    I'll guide you home no matter where you are."
+  </p>
+  <p>
+    One day my father—he told me,
+    "Son, don't let it slip away."
+    When I was just a kid I heard him say,
+  </p>
+  <p>
+    "When you get older
+    Your wild life will live for younger days
+    Think of me if ever you're afraid."
+  </p>
+  <p>
+    He said, "One day you'll leave this world behind
+    So live a life you will remember."
+    My father told me when I was just a child
+    These are the nights that never die
+    My father told me...
+  </p>
+  <p>
+    These are the nights that never die
+    My father told me...
+  </p>
+</body>
+</html>
