--- a/poem.html
+++ b/poem.html
@@ -7,58 +7,58 @@
 
 <body>
   <p>
-    Hey, once upon a younger year
-    When all our shadows disappeared
-    The animals inside came out to play
-    Hey, when face to face with all our fears
-    Learned our lessons through the tears
-    Made memories we knew would never fade
+    Hey, once upon a younger year<br>
+    When all our shadows disappeared<br>
+    The animals inside came out to play<br>
+    Hey, when face to face with all our fears<br>
+    Learned our lessons through the tears<br>
+    Made memories we knew would never fade<br>
   </p>
   <p>  
-    One day my father—he told me,
-    "Son, don't let it slip away"
-    He took me in his arms, I heard him say,
+    One day my father—he told me,<br>
+    "Son, don't let it slip away"<br>
+    He took me in his arms, I heard him say,<br>
   </p>
   <p>
-    "When you get older
-    Your wild life will live for younger days
-    Think of me if ever you're afraid."
+    "When you get older<br>
+    Your wild life will live for younger days<br>
+    Think of me if ever you're afraid."<br>
   </p>
   <p>
-    He said, "One day you'll leave this world behind
-    So live a life you will remember."
-    My father told me when I was just a child
-    These are the nights that never die
-    My father told me...
+    He said, "One day you'll leave this world behind<br>
+    So live a life you will remember."<br>
+    My father told me when I was just a child<br>
+    These are the nights that never die<br>
+    My father told me...<br>
   </p>
   <p>
-    When thunder clouds start pouring down
-    Light a fire they can't put out
-    Carve your name into those shinning stars
-    He said, "Go venture far beyond the shores.
-    Don't forsake this life of yours.
-    I'll guide you home no matter where you are."
+    When thunder clouds start pouring down<br>
+    Light a fire they can't put out<br>
+    Carve your name into those shinning stars<br>
+    He said, "Go venture far beyond the shores.<br>
+    Don't forsake this life of yours.<br>
+    I'll guide you home no matter where you are."<br>
   </p>
   <p>
-    One day my father—he told me,
-    "Son, don't let it slip away."
-    When I was just a kid I heard him say,
+    One day my father—he told me,<br>
+    "Son, don't let it slip away."<br>
+    When I was just a kid I heard him say,<br>
   </p>
   <p>
-    "When you get older
-    Your wild life will live for younger days
-    Think of me if ever you're afraid."
+    "When you get older<br>
+    Your wild life will live for younger days<br>
+    Think of me if ever you're afraid."<br>
   </p>
   <p>
-    He said, "One day you'll leave this world behind
-    So live a life you will remember."
-    My father told me when I was just a child
-    These are the nights that never die
-    My father told me...
+    He said, "One day you'll leave this world behind<br>
+    So live a life you will remember."<br>
+    My father told me when I was just a child<br>
+    These are the nights that never die<br>
+    My father told me...<br>
   </p>
   <p>
-    These are the nights that never die
-    My father told me...
+    These are the nights that never die<br>
+    My father told me...<br>
   </p>
 </body>
 </html>
