--- a/poem.html
+++ b/poem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="poem.css">
   <title>The Nights - Avicii</title>
 </head>
 
