--- a/poem.html
+++ b/poem.html
@@ -18,17 +18,17 @@
   </p>
   <p>  
     One day my father—he told me,<br>
-    "Son, don't let it slip away"<br>
+    <em>"Son, don't let it slip away"</em><br>
     He took me in his arms, I heard him say,<br>
   </p>
   <p>
-    "When you get older<br>
+    <em>"When you get older<br>
     Your wild life will live for younger days<br>
-    Think of me if ever you're afraid."<br>
+    Think of me if ever you're afraid."</em><br>
   </p>
   <p>
-    He said, "One day you'll leave this world behind<br>
-    So live a life you will remember."<br>
+    He said, <em>"One day you'll leave this world behind<br>
+    So live a life you will remember."</em><br>
     My father told me when I was just a child<br>
     These are the nights that never die<br>
     My father told me...<br>
@@ -37,23 +37,23 @@
     When thunder clouds start pouring down<br>
     Light a fire they can't put out<br>
     Carve your name into those shinning stars<br>
-    He said, "Go venture far beyond the shores.<br>
+    He said, <em>"Go venture far beyond the shores.<br>
     Don't forsake this life of yours.<br>
-    I'll guide you home no matter where you are."<br>
+    I'll guide you home no matter where you are."</em><br>
   </p>
   <p>
     One day my father—he told me,<br>
-    "Son, don't let it slip away."<br>
+    <em>"Son, don't let it slip away."</em><br>
     When I was just a kid I heard him say,<br>
   </p>
   <p>
-    "When you get older<br>
+    <em>"When you get older<br>
     Your wild life will live for younger days<br>
-    Think of me if ever you're afraid."<br>
+    Think of me if ever you're afraid."</em><br>
   </p>
   <p>
-    He said, "One day you'll leave this world behind<br>
-    So live a life you will remember."<br>
+    He said, <em>"One day you'll leave this world behind<br>
+    So live a life you will remember."</em><br>
     My father told me when I was just a child<br>
     These are the nights that never die<br>
     My father told me...<br>
