--- a/poem.html
+++ b/poem.html
@@ -8,8 +8,8 @@
 <body>
   <h1>The Nights</h1>
   <h2>By Avicii</h2>
-  <img src="Cat.gif"></img>
-  <h3>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h3>
+  <img src="Cat.gif" height="30px" width="30px"></img>
+  <h3>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h3>
   <p>
     Hey, once upon a younger year<br>
     When all our shadows disappeared<br>
