--- a/poem.html
+++ b/poem.html
@@ -8,7 +8,7 @@
 <body>
   <h1>The Nights</h1>
   <h2>By Avicii</h2>
-  <img src="Cat.gif" height="30px" width="30px"></img>
+  <marquee><img src="Cat.gif" height="30px" width="30px"></img></marquee>
   <h3>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h3>
   <p>
     Hey, once upon a younger year<br>
