--- a/poem.html
+++ b/poem.html
@@ -10,60 +10,75 @@
   <h2>By Avicii</h2>
   <marquee scrollamount="2"><img class="img-cat" src="Cat.gif" height="100px" width="100px"></img></marquee>
   <h3>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h3>
-  <p>
-    Hey, once upon a younger year<br>
-    When all our shadows disappeared<br>
-    The animals inside came out to play<br>
-    Hey, when face to face with all our fears<br>
-    Learned our lessons through the tears<br>
-    Made memories we knew would never fade<br>
-  </p>
-  <p>  
-    One day my father—he told me,<br>
-    <em>"Son, don't let it slip away"</em><br>
-    He took me in his arms, I heard him say,<br>
-  </p>
-  <p>
-    <em>"When you get older<br>
-    Your wild life will live for younger days<br>
-    Think of me if ever you're afraid."</em><br>
-  </p>
-  <p>
-    He said, <em>"One day you'll leave this world behind<br>
-    So live a life you will remember."</em><br>
-    My father told me when I was just a child<br>
-    These are the nights that never die<br>
-    My father told me...<br>
-  </p>
-  <p>
-    When thunder clouds start pouring down<br>
-    Light a fire they can't put out<br>
-    Carve your name into those shinning stars<br>
-    He said, <em>"Go venture far beyond the shores.<br>
-    Don't forsake this life of yours.<br>
-    I'll guide you home no matter where you are."</em><br>
-  </p>
-  <p>
-    One day my father—he told me,<br>
-    <em>"Son, don't let it slip away."</em><br>
-    When I was just a kid I heard him say,<br>
-  </p>
-  <p>
-    <em>"When you get older<br>
-    Your wild life will live for younger days<br>
-    Think of me if ever you're afraid."</em><br>
-  </p>
-  <p>
-    He said, <em>"One day you'll leave this world behind<br>
-    So live a life you will remember."</em><br>
-    My father told me when I was just a child<br>
-    These are the nights that never die<br>
-    My father told me...<br>
-  </p>
-  <p>
-    These are the nights that never die<br>
-    My father told me...<br>
-  </p>
+  <div id="divRight">
+    <p>
+     Hey, once upon a younger year<br>
+     When all our shadows disappeared<br>
+     The animals inside came out to play<br>
+     Hey, when face to face with all our fears<br>
+     Learned our lessons through the tears<br>
+      Made memories we knew would never fade<br>
+   </p>
+   <p>  
+     One day my father—he told me,<br>
+     <em>"Son, don't let it slip away"</em><br>
+     He took me in his arms, I heard him say,<br>
+   </p>
+   <p>
+     <em>"When you get older<br>
+     Your wild life will live for younger days<br>
+     Think of me if ever you're afraid."</em><br>
+   </p>
+    <p>
+      He said, <em>"One day you'll leave this world behind<br>
+      So live a life you will remember."</em><br>
+      My father told me when I was just a child<br>
+      These are the nights that never die<br>
+      My father told me...<br>
+   </p>
+   <p>
+      When thunder clouds start pouring down<br>
+      Light a fire they can't put out<br>
+      Carve your name into those shinning stars<br>
+      He said, <em>"Go venture far beyond the shores.<br>
+      Don't forsake this life of yours.<br>
+      I'll guide you home no matter where you are."</em><br>
+   </p>
+   <p>
+      One day my father—he told me,<br>
+      <em>"Son, don't let it slip away."</em><br>
+      When I was just a kid I heard him say,<br>
+   </p>
+    <p>
+     <em>"When you get older<br>
+     Your wild life will live for younger days<br>
+     Think of me if ever you're afraid."</em><br>
+   </p>
+   <p>
+     He said, <em>"One day you'll leave this world behind<br>
+     So live a life you will remember."</em><br>
+     My father told me when I was just a child<br>
+     These are the nights that never die<br>
+     My father told me...<br>
+    </p>
+    <p>
+     These are the nights that never die<br>
+     My father told me...<br>
+   </p>
+  </div>
+  
+  <div id="divLeft">
+    <img src="Avicii.jpg" alt="A picture of Tim Bergling (Avicii)">
+    <p>
+      Tim Bergling ; 8 September 1989 – 20 April 2018), better known by his stage name Avicii, was a Swedish DJ, remixer, record producer, musician, and songwriter who specialized in audio programming, remixing, and record producing.
+    </p>
+    <p>
+      In March 2013, Bergling announced and premiered many new tracks from his new album True, which would later be set to be released in September, during his Main Stage set at Ultra Music Festival in Miami. The new tracks were experimental in nature. For example, Bergling brought out a stomping band to play through the new bluegrass-tinged song "Wake Me Up". Many of these new songs received mixed critical reviews after the concert.
+      On 11 April 2013, Bergling released his new album promo mix on SoundCloud. It contained some songs from True and some of his non-album singles.
+    </p>
+  
+  </div>
+    
   <h3>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h3>
 </body>
 </html>
