--- a/poem.html
+++ b/poem.html
@@ -69,10 +69,10 @@
   
   <div id="divRight">
     <img src="Avicii.png" alt="A picture of Tim Bergling (Avicii)" width="313px" height="221px">
-    <p>
+    <p class="bio1">
       Tim Bergling ; 8 September 1989 – 20 April 2018), better known by his stage name Avicii, was a Swedish DJ, remixer, record producer, musician, and songwriter who specialized in audio programming, remixing, and record producing.
     </p>
-    <p>
+    <p class="bio2">
       In March 2013, Bergling announced and premiered many new tracks from his new album True, which would later be set to be released in September, during his Main Stage set at Ultra Music Festival in Miami. The new tracks were experimental in nature. For example, Bergling brought out a stomping band to play through the new bluegrass-tinged song "Wake Me Up". Many of these new songs received mixed critical reviews after the concert.
       On 11 April 2013, Bergling released his new album promo mix on SoundCloud. It contained some songs from True and some of his non-album singles.
     </p>
