--- a/poem.html
+++ b/poem.html
@@ -68,7 +68,7 @@
   </div>
   
   <div id="divRight">
-    <img src="Avicii.png" alt="A picture of Tim Bergling (Avicii)" width="313px" height="221px">
+    <img src="Avicii.png" class="portrait" alt="A picture of Tim Bergling (Avicii)" width="313px" height="221px">
     <p class="bio1">
       Tim Bergling ; 8 September 1989 – 20 April 2018), better known by his stage name Avicii, was a Swedish DJ, remixer, record producer, musician, and songwriter who specialized in audio programming, remixing, and record producing.
     </p>
