--- a/quiz.html
+++ b/quiz.html
@@ -2,10 +2,19 @@
 <html>
 <head>
   <title>My Quiz</title>
+  <h1>Sick Ass Quiz</h1>
 </head>
 <body>
   <p>
-    <label id="">
+     <h2>1. What gender is Mr. Carroll</h2><br>
+     <label>
+       Select an option:
+       <select id="answer1">
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+        <option value="other">Other</option>
+       </select>
+     </label>
   </p>
   
   <button id="button">
