--- a/quiz.html
+++ b/quiz.html
@@ -13,15 +13,15 @@
         		<option value="red">Red</option>
         		<option value="blue">Blue</option>
         		<option value="green">Green</option>
-				<option value="black">Black</option>
+			<option value="black">Black</option>
        		</select>
      	</label>
   	</p>
 	<p>
   		<h2>2. How many eggs can you stack?</h2><br>
 		<label id="answer2">
-    			Select a number by using the slider: <span id="eggNum" ></span>
-    	<input type="range" value="0" max="25" id="eggSelect">
+    			Select a number by using the slider:
+    		<input type="range" value="0" max="25" id="eggSelect"><span id="eggNum" ></span>
   		</label>
 	</p>
 	
@@ -41,26 +41,42 @@
 		<label><input type="radio" name="oreSelect" value="gold">Gold</label><br>
 	</p>
   
-  <button id="button">
-    Answers
-  </button>
+	<button id="button">
+		Answers
+	</button>
   
-  <h1> Your Score was: <span id="score">...</span> out of 4</h1>
+	<h1> Your Score was: <span id="score">...</span> out of 4</h1>
   
 <script>
 	function clickAction() {
 		score.textContent = 0;
-		if (answer1.value == "green"){
-			score.textContent = Number(score.textContent) + 1;	
+		if (answer1.value == 'green'){
+			score.textContent = Number(score.textContent) + 1;
+		} else if (answer1.value != 'green') {
+			score.textContent = Number(score.textContent) + 0;
 	    }
+		if (eggSelect.value == 16) {
+			score.textContent = Number(score.textContent) + 1;
+		} else if (eggSelect.value != 16) {
+			score.textContent = Number(score.textContent) + 0;
+		}
 		if (answer3.checked && answer4.checked && answer5.checked){
 			score.textContent = Number(score.textContent) + 1;	
+		} else {
+			score.textContent = Number(score.textContent) + 0;
         }
-		if (answer6.value == "emerald"){
-			score.textContent = Number(score.textContent) + 1;	
-	    }
+		if (answer6.checked){
+			score.textContent = Number(score.textContent) + 1;
+		} else {
+			score.textContent = Number(score.textContent) + 0;
+		}
 	}
+	function changeAction() {
+		eggNum.textContent = eggSelect.value;
+	}
+
 	button.onclick = clickAction;
+	eggSelect.onchange = changeAction;
 </script>
 
 </body>
