--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head><title>My First Web Page</title></head>
+<head>
+	<title>Alick Galvez</title>
+</head>
 <body>
-Hello World!
-
-<!-- Added by SRC -->
-<br><br>
-Click <a href="poem.html">here</a> for my favourite poem
-<!-- End of SRC code -->
+	<div class="intro">
+		<h3>Welcome to my webpage</h3>
+		<br><br>
+		<h4>Here is some of the work I have done:</h4>
+		<ul style="list-style-position: outside;">
+			<li>My favourite <a href="https://alickdaslayer.github.io/poem.html">song</a></li>
+			<li>A <a href="https://alickdaslayer.github.io/quiz.html">quiz</a> for you to try</li>
+		</ul>
+	</div>
 </body>
 <html>
